kubernetes/apps/kritik/kritik/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kritik-webhooks
  namespace: kritik
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - kritik-webhook.nikola.wtf
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hooks
      backendRefs:
        - name: kritik
          port: 8080
